qdoc: Fixed spacing before "default" and "read-only".
Task-number: QTBUG-11346

--- a/doc/src/template/style/style.css
+++ b/doc/src/template/style/style.css
@@ -829,12 +829,14 @@
     }
     .qmlreadonly
     {
+        padding-left: 5px;
         float: right;
         color: #254117;
     }
 
     .qmldefault
     {
+        padding-left: 5px;
         float: right;
         color: red;
     }
