--- a/tools/qdoc3/test/style/style.css
+++ b/tools/qdoc3/test/style/style.css
@@ -776,12 +776,14 @@
     }
     .qmlreadonly
     {
+        padding-left: 3px;
         float: right;
         color: #254117;
     }
 
     .qmldefault
     {
+        padding-left: 3px;
         float: right;
         color: red;
     }
